V 1.4.0 see versionsinfo.txt

--- a/ToDo.TXT
+++ b/ToDo.TXT
@@ -1,4 +1,2 @@
-Farbbalken des Wartestatus konfigurierbar machen, auch abschaltbar und durch Text ersetzbar
-Link der Aufnahmerückmeldungen auch sichtbar wenn eingeloggt
-Auswahlkriterien der Aufnahme mitloggen und bei Aufnahmestatistik anzeigbar machen
+﻿Auswahlkriterien der Aufnahme mitloggen und bei Aufnahmestatistik anzeigbar machen
 Felderfunktion aus Feedbackscript übernehmen
